updated config files (Bug #33278)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54496 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/conffiles/etc/cups/cups-pdf.conf
+++ b/services/univention-printserver/conffiles/etc/cups/cups-pdf.conf
@@ -1,10 +1,10 @@
 @%@UCRWARNING=# @%@
 
-#  cups-pdf.conf -- CUPS Backend Configuration (version 2.4.2, 2006-09-30)
+#  cups-pdf.conf -- CUPS Backend Configuration (version 2.6.1, 2011-10-04)
 #  18.09.2005, Volker C. Behr
-#  Exp. Physik V, Uni Wuerzburg
-#  vrbehr@cip.physik.uni-wuerzburg.de
-#  http://cip.physik.uni-wuerzburg.de/~vrbehr/cups-pdf
+#  Experimentelle Physik V, Universitaet Wuerzburg
+#  behr@physik.uni-wuerzburg.de
+#  http://www.cups-pdf.de
 #
 #
 #  This code may be freely distributed as long as this header
@@ -75,6 +75,15 @@ if configRegistry.has_key('cups/cups-pdf/anonymous'):
 #									  #
 ###########################################################################
 
+### Key: Truncate
+##  truncate long filenames to a maximum of <Truncate> characters
+##  this does not consider the full path to the output but only the filename
+##  without the .pdf-extension or a job-id prefix (see 'Label')
+##  the minimal value is 8
+### Default: 64
+
+#Truncate 64
+
 ### Key: Cut
 ##  removing file name extensions before appending .pdf to output
 ##  extensions will only be removed if _both_ the following criteria are met:
@@ -92,6 +101,8 @@ if configRegistry.has_key('cups/cups-pdf/anonymous'):
 ##  files in case new ones with identical names are created; always true for
 ##  untitled documents
 ##  0: label untitled documents only, 1: label all documents
+##  1: label all documents with a preceeding "job_#-"
+##  2: label all documents with a tailing "-job_#"
 ### Default: 0
 
 Label 1
@@ -113,7 +124,8 @@ Label 1
 ###########################################################################
 
 ### Key: AnonUser
-##  user for anonymous PDF creation (this might be a security issue)
+##  uid for anonymous PDF creation (this might be a security issue)
+##  this setting has no influence on AnonDirName (see there)
 ##  set this to an empty value to disable anonymous
 ### Default: nobody
 
@@ -233,9 +245,9 @@ Log /var/log/cups
 ### Key: GSCall
 ## command line for calling GhostScript (!!! DO NOT USE NEWLINES !!!)
 ## MacOSX: for using pstopdf set this to %s %s -o %s %s
-### Default: %s -q -dCompatibilityLevel=%s -dNOPAUSE -dBATCH -dSAFER -sDEVICE=pdfwrite -sOutputFile="%s" -dAutoRotatePages=/PageByPage -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dPDFSETTINGS=/prepress -c save pop -f %s
+### Default: %s -q -dCompatibilityLevel=%s -dNOPAUSE -dBATCH -dSAFER -sDEVICE=pdfwrite -sOutputFile="%s" -dAutoRotatePages=/PageByPage -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dPDFSETTINGS=/prepress -c .setpdfwrite -f %s
 
-#GSCall %s -q -dCompatibilityLevel=%s -dNOPAUSE -dBATCH -dSAFER -sDEVICE=pdfwrite -sOutputFile="%s" -dAutoRotatePages=/PageByPage -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dPDFSETTINGS=/prepress -c save pop -f %s
+#GSCall %s -q -dCompatibilityLevel=%s -dNOPAUSE -dBATCH -dSAFER -sDEVICE=pdfwrite -sOutputFile="%s" -dAutoRotatePages=/PageByPage -dAutoFilterColorImages=false -dColorImageFilter=/FlateEncode -dPDFSETTINGS=/prepress -c .setpdfwrite -f %s
 
 ### Key: PDFVer
 ##  PDF version to be created - can be "1.5", "1.4", "1.3" or "1.2"
@@ -246,7 +258,8 @@ Log /var/log/cups
 
 ### Key: PostProcessing
 ##  postprocessing script that will be called after the creation of the PDF
-##  as arguments the filename of the PDF and the username will be passed
+##  as arguments the filename of the PDF, the username as determined by
+##  CUPS-PDF and the one as given to CUPS-PDF will be passed
 ##  the script will be called with user privileges
 ##  set this to an empty value to use no postprocessing
 ### Default: <empty>
@@ -272,4 +285,14 @@ Log /var/log/cups
 ##  0: disable, 1: enable
 ### Default: 0
 
-#DecodeHexStrings 0
+DecodeHexStrings 1
+
+### Key: FixNewlines
+##  this option will try to fix various unusal line delimiters (e.g.
+##  form feeds)
+##  especially useful when using non-Linux-generated files
+##  0: disable, 1: enable
+### Default: 0
+
+#FixNewlines 0
+
