--- a/services/univention-printserver/conffiles/etc/cups/cupsd.conf
+++ b/services/univention-printserver/conffiles/etc/cups/cupsd.conf
@@ -63,17 +63,6 @@ ServerAdmin @%@cups/admin@%@
 ########
 
 #
-# AccessLog: the access log file; if this does not start with a leading /
-# then it is assumed to be relative to ServerRoot.  By default set to
-# "/var/log/cups/access_log"
-#
-# You can also use the special name "syslog" to send the output to the
-# syslog file or daemon.
-#
-
-AccessLog /var/log/cups/access_log
-
-#
 # Classification: the classification level of the server.  If set, this
 # classification is displayed on all pages, and raw printing is disabled.
 # The default is the empty string.
@@ -97,13 +86,6 @@ AccessLog /var/log/cups/access_log
 #ClassifyOverride off
 
 #
-# DataDir: the root directory for the CUPS data files.
-# By default "/usr/share/cups".
-#
-
-#DataDir /usr/share/cups
-
-#
 # DefaultCharset: the default character set to use. If not specified,
 # defaults to "utf-8".  Note that this can also be overridden in
 # HTML documents...
@@ -118,23 +100,6 @@ AccessLog /var/log/cups/access_log
 
 DefaultLanguage de
 
-#
-# DocumentRoot: the root directory for HTTP documents that are served.
-# By default "/usr/share/cups/doc-root".
-#
-
-#DocumentRoot /usr/share/cups/doc-root
-
-#
-# ErrorLog: the error log file; if this does not start with a leading /
-# then it is assumed to be relative to ServerRoot.  By default set to
-# "/var/log/cups/error_log"
-#
-# You can also use the special name "syslog" to send the output to the
-# syslog file or daemon.
-#
-
-ErrorLog /var/log/cups/error_log
 
 # ErrorPolicy: The ErrorPolicy directive defines the default policy that is used /
 # when a backend is unable to send a print job to the printer.
@@ -163,13 +128,6 @@ for i in ErrorPolicy:
 @!@
 
 #
-# FontPath: the path to locate all font files (currently only for pstoraster)
-# By default "/usr/share/cups/fonts".
-#
-
-#FontPath /usr/share/cups/fonts
-
-#
 # The LogLevel directive specifies the level of logging for the ErrorLog file.
 # The following values are recognized (each level logs everything under the
 # preceding levels):
@@ -194,17 +152,6 @@ LogLevel @%@cups/debug/level@%@
 #
 
 #MaxLogSize 0
-
-#
-# PageLog: the page log file; if this does not start with a leading /
-# then it is assumed to be relative to ServerRoot.  By default set to
-# "/var/log/cups/page_log"
-#
-# You can also use the special name "syslog" to send the output to the
-# syslog file or daemon.
-#
-
-PageLog /var/log/cups/page_log
 
 #
 # PreserveJobHistory: whether or not to preserve the job history after a
@@ -235,27 +182,6 @@ PageLog /var/log/cups/page_log
 #MaxJobs 500
 
 #
-# Printcap: the name of the printcap file.  Default is /etc/printcap.
-# Leave blank to disable printcap file generation.
-#
-
-Printcap /etc/printcap.cups
-
-# allow FileDevices
-@!@
-if configRegistry.is_true('cups/filedevice', False):
-	print "FileDevice Yes"
-@!@
-
-#
-# PrintcapFormat: the format of the printcap file, currently either
-# BSD or Solaris.  The default is "BSD".
-#
-
-#PrintcapFormat BSD
-#PrintcapFormat Solaris
-
-#
 # PrintcapGUI: the name of the GUI options panel program to associate
 # with print queues under IRIX.  The default is "/usr/bin/glpoptions"
 # from ESP Print Pro.
@@ -267,70 +193,11 @@ if configRegistry.is_true('cups/filedevice', False):
 
 #PrintcapGUI /usr/bin/glpoptions
 
-#
-# RequestRoot: the directory where request files are stored.
-# By default "/var/spool/cups".
-#
-
-#RequestRoot /var/spool/cups
-
-#
-# RemoteRoot: the name of the user assigned to unauthenticated accesses
-# from remote systems.  By default "remroot".
-#
-
-#RemoteRoot remroot
-
-#
-# ServerBin: the root directory for the scheduler executables.
-# By default "/usr/lib/cups".
-#
-
-#ServerBin /usr/lib/cups
-
-#
-# ServerRoot: the root directory for the scheduler.
-# By default "/etc/cups".
-#
-
-#ServerRoot /etc/cups
-
-
-########
-######## Encryption Support
-########
-
-#
-# ServerCertificate: the file to read containing the server's certificate.
-# Defaults to "/etc/cups/ssl/server.crt".
-#
-
-#ServerCertificate /etc/cups/ssl/server.crt
-
-#
-# ServerKey: the file to read containing the server's key.
-# Defaults to "/etc/cups/ssl/server.key".
-#
-
-#ServerKey /etc/cups/ssl/server.key
-
 
 ########
 ######## Filter Options
 ########
 
-#
-# User/Group: the user and group the server runs under.  Normally this
-# must be lp and sys, however you can configure things for another
-# user or group as needed.
-#
-# Note: the server must be run initially as root to support the
-# default IPP port of 631.  It changes users whenever an external
-# program is run, or if the RunAsUser directive is specified...
-#
-
-User lp
-Group sys
 
 #
 # RIPCache: the amount of memory that each RIP should use to cache
@@ -340,14 +207,6 @@ Group sys
 #
 
 #RIPCache 8m
-
-#
-# TempDir: the directory to put temporary files in.  This directory must be
-# writable by the user defined above!  Defaults to "/var/spool/cups/tmp" or
-# the value of the TMPDIR environment variable.
-#
-
-#TempDir /var/spool/cups/tmp
 
 #
 # FilterLimit: sets the maximum cost of all job filters that can be run
@@ -620,24 +479,6 @@ Browsing Off
 ########
 
 #
-# SystemGroup: the group name for "System" (printer administration)
-# access.  The default varies depending on the operating system, but
-# will be "sys", "system", or "root" (checked for in that order.)
-#
-
-@!@
-import re
-systemGroup = []
-if configRegistry.get('cups/systemgroup'):
-	for i in configRegistry['cups/systemgroup'].split(','):
-		if re.search('\s', i):
-			systemGroup.append('"%s"' % i)
-		else:
-			systemGroup.append(i)
-print "SystemGroup %s " % ' '.join(systemGroup)
-@!@
-
-#
 # Access permissions for each directory served by the scheduler.
 # Locations are relative to DocumentRoot...
 #
@@ -795,8 +636,7 @@ for printer in configRegistry.get('cups/restrictedprinters', '').split():
 #
 
 AuthType Basic
-AuthClass System
-#AuthType None
+Require user @SYSTEM
 
 ## Restrict access to local domain
     Order Deny,Allow
