Updated config files (Bug #36114)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-dansguardian/conffiles/etc/dansguardian/dansguardian.conf
+++ b/services/univention-dansguardian/conffiles/etc/dansguardian/dansguardian.conf
@@ -1,6 +1,6 @@
 @%@UCRWARNING=#@%@
 
-# DansGuardian config file for version 2.9.9.4
+# DansGuardian config file for version 2.10.1.1
 
 # **NOTE** as of version 2.7.5 most of the list files are now in dansguardianf1.conf
 
@@ -105,6 +105,20 @@ try:
 except:
 	print "proxyport = 3129"
 @!@
+
+# Whether to retrieve the original destination IP in transparent proxy
+# setups and check it against the domain pulled from the HTTP headers.
+#
+# Be aware that when visiting sites which use a certain type of round-robin
+# DNS for load balancing, DG may mark requests as invalid unless DG gets
+# exactly the same answers to its DNS requests as clients.  The chances of
+# this happening can be increased if all clients and servers on the same LAN
+# make use of a local, caching DNS server instead of using upstream DNS
+# directly.
+#
+# See http://www.kb.cert.org/vuls/id/435052
+# on (default) | off
+#!! Not compiled !! originalip = on
 
 # accessdeniedaddress is the address of your web server to which the cgi
 # dansguardian reporting script was copied. Only used in reporting levels 1 and 2.
@@ -597,6 +611,18 @@ ipipcfilename = '/tmp/.dguardianipipc'
 
 # PID filename
 #
+# Defines process id directory and filename.
+#pidfilename = '/var/run/dansguardian.pid'
+
+# Disable daemoning
+# If enabled the process will not fork into the background.
+# It is not usually advantageous to do this.
+# on|off (defaults to off)
+nodaemon = off
+
+# Disable logging process
+# on|off (defaults to off)
+nologger = off
 
 # Enable logging of "ADs" category blocks
 # on|off (defaults to off)
@@ -606,6 +632,15 @@ logadblocks = off
 # Some browsers will cause a *lot* of extra information on each line!
 # on|off (defaults to off)
 loguseragent = off
+
+# Daemon runas user and group
+# This is the user that DansGuardian runs as.  Normally the user/group nobody.
+# Uncomment to use.  Defaults to the user set at compile time.
+# Temp files created during virus scanning are given owner and group read
+# permissions; to use content scanners based on external processes, such as
+# clamdscan, the two processes must run with either the same group or user ID.
+#daemonuser = 'dansguardian'
+#daemongroup = 'dansguardian'
 
 # Soft restart
 # When on this disables the forced killing off all processes in the process group.
