Config Update (Bug #36114)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54529 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printquota/conffiles/etc/pykota/pykotadmin.conf
+++ b/services/univention-printquota/conffiles/etc/pykota/pykotadmin.conf
@@ -1,11 +1,33 @@
 @%@UCRWARNING=# @%@
 
-# Under NO circumstances regular users should 
+# PyKota sample administrator's configuration file
+#
+# Under NO circumstances regular users should
 # be allowed to read this file.
+#
+#
+# File format :
+#
+#   - A mandatory [global] section :
+#
+#     Contains configuration directives to specify the username and
+#     optional password for the PyKota's database administrator.
+#     This user is either a PostgreSQL or MySQL user, or an LDAP complete dn.
+#     For SQLite, only the [global] section itself is required, but
+#     the rest of the file can be empty.
+#
+# Directives format :
+#
+#   - Directive's name, followed by ':' followed by the directive's value.
+#
+#   - No leading whitespace : leading whitespace tell the parser that the
+#     current directive is the continuation of the previous one. Use with
+#     care and only when you need it.
+#
 #
 # PyKota - Print Quotas for CUPS and LPRng
 #
-# (c) 2003-2004 Jerome Alet <alet@librelogiciel.com>
+# (c) 2003, 2004, 2005, 2006, 2007 Jerome Alet <alet@librelogiciel.com>
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
@@ -15,12 +37,12 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 #
-# $Id: pykotadmin.conf,v 1.1.2.2 2005/02/02 14:45:51 steuwer Exp $
+# $Id: pykotadmin.conf.sample 3133 2007-01-17 22:19:42Z jerome $
 #
 
 #
@@ -32,13 +54,17 @@
 #
 
 #
-# THIS FILE CAN ONLY CONTAIN A [global] SECTION AND TWO FIELDS
-# NAMED storageadmin AND storageadminpw
+# THIS FILE CAN ONLY CONTAIN A [global] SECTION AND ONE MANDATORY
+# FIELD NAMED storageadmin, ALONG WITH THE FOLLOWING FOUR OPTIONAL
+# FIELDS : storageadminpw, storagebackend, storageserver, storagename.
 #
 
 [global]
 
-# Quota Storage administrator's name and password
+# For SQLite3, you can comment out all the lines in this file.
+
+# PostgreSQL's or MySQL's Quota Storage administrator's name and password
+# Please comment these lines out and see further below if you use LDAP.
 storageadmin: @%@cups/quota/account@%@
 # storageadminpw: Comment out if unused, or set to Quota Storage admin password
 
@@ -47,3 +73,13 @@ if baseConfig.has_key('cups/quota/secret'):
 	print "storagepasswd: "+open(baseConfig['cups/quota/secret']).readline()
 	print "storageadminpw: "+open(baseConfig['cups/quota/secret']).readline()
 @!@
+
+# storagebackend: ldapstorage
+# storageserver: ldap://ldapmaster.example.com:389
+# storagename: dc=example,dc=com
+#
+# NB : the user and password below are the ones contained in
+# the sample LDIF file pykota/initscripts/ldap/pykota-sample.ldif
+# Please adapt these lines to your own needs.
+# storageadmin: cn=pykotaadmin,dc=example,dc=com
+# storageadminpw: BlfUPg7t
