Bug #35654: * adjust dialog styling * fix font sizes for browsers * adjust background gradient * fix padding for radio buttons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54550 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/Makefile
+++ b/management/univention-management-console-frontend-theme/Makefile
@@ -93,7 +93,7 @@ $(BOOSTRAP_FILE): bootstrap.zip
 
 build: css/umc.css css/fonts
 
-build-dev: tmp css $(BOOSTRAP_FILE)
+build-dev: tmp css $(BOOSTRAP_FILE) css/fonts
 	cp -r $(TMP_THEME_DIR)/* css
 	cd css; stylus -m .
 	cd css/form; stylus -m .
