univention-apache (6.0.16-8) unstable; urgency=medium
  * disable SSLv2 and SSLv3 (Bug #36173)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54554 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/conffiles/etc/apache2/mods-available/ssl.conf
+++ b/services/univention-apache/conffiles/etc/apache2/mods-available/ssl.conf
@@ -49,6 +49,8 @@ SSLSessionCacheTimeout  300
 #   SSL engine uses internally for inter-process synchronization. 
 SSLMutex  file:/var/run/apache2/ssl_mutex
 
+SSLProtocol all -SSLv2 -SSLv3
+
 </IfModule>
 
 
