Run tests only if the update was successful (Bug #36205)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54558 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-075-update-3.2-to-4.0-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-075-update-3.2-to-4.0-slave-s4.cfg
@@ -50,7 +50,7 @@ command3:
  # None
 command4:
  # Upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing
+ . utils.sh; upgrade_to_testing && touch UCS4_UPDATED
  . utils.sh; run_join_scripts
 command5:
  . utils.sh && do_reboot
@@ -82,7 +82,7 @@ command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
  # Upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing
+ . utils.sh; upgrade_to_testing && touch UCS4_UPDATED
  . utils.sh; run_join_scripts
 command5:
  . utils.sh; install_ucs_test
@@ -90,7 +90,7 @@ command5:
  LOCAL sleep 60
  . utils.sh && wait_for_reboot
 command6:
- . utils.sh; run_tests
+ . utils.sh; [ -f UCS4_UPDATED ] && run_tests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave075_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave075_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[slave075_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
