--- a/test/ucs-ec2-tools/examples/jenkins/autotest-117-update-3.2-to-4.0-appupdate-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-117-update-3.2-to-4.0-appupdate-member-s4.cfg
@@ -54,7 +54,7 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  # Upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing
+ . utils.sh; upgrade_to_testing && touch UCS4_UPDATED
  . utils.sh; run_join_scripts
 command6:
  . utils.sh; install_apps_master_packages APP_ID
@@ -93,7 +93,7 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  # Upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing
+ . utils.sh; upgrade_to_testing && touch UCS4_UPDATED
  . utils.sh; run_join_scripts
 command6:
  . utils.sh; install_apps_master_packages APP_ID
@@ -101,7 +101,7 @@ command6:
 command7:
  . utils.sh; install_apps_test_packages APP_ID
 command8:
- . utils.sh; run_apptests
+ . utils.sh; [ -f UCS4_UPDATED ] && run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member117_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member117_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member117_IP]:"/var/log/univention/{join,setup,listener,updater}.log" .
