--- a/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
@@ -48,7 +48,7 @@ command2:
  . utils.sh; run_setup_join
 command3:
 # Upgrade to UCS 4.0
- . utils.sh; upgrade_to_testing
+ . utils.sh; upgrade_to_testing && touch UCS4_UPDATED
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
