--- a/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.2-to-4.0-appupdate-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-111-update-3.2-to-4.0-appupdate-master-s4.cfg
@@ -38,7 +38,7 @@ profile:
  ldap/base="dc=autotest111,dc=local"
  root_password="univention"
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-s4-connector univention-samba4 univention-dhcp univention-printserver cups univention-squid univention-nagios-server univention-pkgdb"
+ packages_install="univention-s4-connector univention-samba4 univention-dhcp univention-printserver cups univention-squid univention-nagios-server univention-pkgdb univention-java"
  packages_remove=""
  server/role="domaincontroller_master"
 command1:
