--- a/test/ucs-ec2-tools/examples/jenkins/autotest-076-update-3.2-to-4.0-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-076-update-3.2-to-4.0-member-s3.cfg
@@ -71,7 +71,7 @@ profile:
  server/role="memberserver"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-samba"
+ packages_install="univention-samba univention-java"
  packages_remove=""
  nameserver=[master076_IP]
 command1:
