--- a/test/ucs-ec2-tools/examples/jenkins/autotest-116-update-3.2-to-4.0-appupdate-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-116-update-3.2-to-4.0-appupdate-member-s3.cfg
@@ -78,7 +78,7 @@ profile:
  server/role="memberserver"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-samba univention-java"
+ packages_install="univention-samba"
  packages_remove=""
  nameserver=[master116_IP]
 command1:
