Reboot only if the update was successful (Bug #36205)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54570 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-070-update-3.2-to-4.0-master-s3.cfg
@@ -52,7 +52,7 @@ command3:
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
- . utils.sh && do_reboot
+ . utils.sh; [ -f UCS4_UPDATED ] && do_reboot
  LOCAL sleep 60
  . utils.sh && wait_for_reboot
 command5:
