--- a/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-071-update-3.2-to-4.0-master-s4.cfg
@@ -52,7 +52,7 @@ command3:
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
- . utils.sh && do_reboot
+ . utils.sh; [ -f UCS4_UPDATED ] && do_reboot
  LOCAL sleep 60
  . utils.sh && wait_for_reboot
 command5:
