--- a/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-073-update-3.2-to-4.0-backup-s4.cfg
@@ -53,7 +53,7 @@ command4:
  . utils.sh; upgrade_to_testing && touch UCS4_UPDATED
  . utils.sh; run_join_scripts
 command5:
- . utils.sh && do_reboot
+ . utils.sh; [ -f UCS4_UPDATED ] && do_reboot
  LOCAL sleep 60
  . utils.sh && wait_for_reboot
 command6:
@@ -86,7 +86,7 @@ command4:
  . utils.sh; run_join_scripts
 command5:
  . utils.sh; install_ucs_test
- . utils.sh && do_reboot
+ . utils.sh; [ -f UCS4_UPDATED ] && do_reboot
  LOCAL sleep 60
  . utils.sh && wait_for_reboot
 command6:
