add apache2/ssl/v2 and apache2/ssl/v3 to configure SSL protocols (Bug #36173)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54575 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/conffiles/etc/apache2/mods-available/ssl.conf
+++ b/services/univention-apache/conffiles/etc/apache2/mods-available/ssl.conf
@@ -49,7 +49,14 @@ SSLSessionCacheTimeout  300
 #   SSL engine uses internally for inter-process synchronization. 
 SSLMutex  file:/var/run/apache2/ssl_mutex
 
-SSLProtocol all -SSLv2 -SSLv3
+@!@
+protocol = 'SSLProtocol all'
+if not configRegistry.is_true('apache2/ssl/v2', default=False):
+	protocol += ' -SSLv2'
+if not configRegistry.is_true('apache2/ssl/v3', default=False):
+	protocol += ' -SSLv3'
+print protocol
+@!@
 
 </IfModule>
 
