removed last commit (Bug #36224)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54591 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/control
+++ b/base/univention-system-setup/debian/control
@@ -31,10 +31,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  python-univention-lib (>= 1.0.25-1),
  shell-univention-lib (>= 3.0.1-1),
  python-univention-lib (>= 3.0.1-1),
- univention-ipcalc (>= 5),
- kbd
-Conflicts:
- console-tools
+ univention-ipcalc (>= 5)
 Recommends: univention-management-console-module-setup
 Provides: ${python:Provides}
 XB-Python-Version: ${python:Versions}
