removed last commit (Bug #36224)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54593 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/control
+++ b/base/univention-base-files/debian/control
@@ -27,10 +27,7 @@ Depends: ${misc:Depends},
  bzip2,
  psmisc,
  lsb-base,
- lsb-release,
- kbd
-Conflicts:
- console-tools
+ lsb-release
 Recommends: vim,
  emacs23,
  less,
