Bug #35088, #36215: added YAMLs
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54607 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2014-10-15-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2014-10-15-univention-directory-manager-modules.yaml
@@ -2,9 +2,10 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-3
 src: univention-directory-manager-modules
-fix: 9.0.76-32.1246.201410151410
+fix: 9.0.76-33.1249.201410171512
 version: [3]
 desc: |
   * A backslash in the home share of an user no longer results in a
     traceback.
-bug: [35953]
+  * Added new scripts lock_expired_accounts and lock_expired_passwords.
+bug: [35953,35088,36215]
