added PidFile to freshclam.conf (Bug #35264)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54637 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-antivir-mail/conffiles/etc/clamav/freshclam.conf
+++ b/mail/univention-antivir-mail/conffiles/etc/clamav/freshclam.conf
@@ -42,3 +42,4 @@ else:
 DatabaseDirectory /var/lib/clamav/
 NotifyClamd /etc/clamav/clamd.conf
 DNSDatabaseInfo current.cvd.clamav.net
+PidFile /var/run/clamav/freshclam.pid
