Bug #36238 DVD: Depends on univention-archive-key
instead of debian-archive-keyring

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54663 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -188,7 +188,7 @@ export FORCE_FIRMWARE=1
 #export amd64_MKISOFS_OPTS="-as mkisofs -r -checksum_algorithm_iso md5,sha1"
 
 # Keyring (defaults):
-#ARCHIVE_KEYRING_PACKAGE=debian-archive-keyring
+ARCHIVE_KEYRING_PACKAGE=univention-archive-key
 # The path to the keyring file relative to $TDIR/archive-keyring/
 #ARCHIVE_KEYRING_FILE=usr/share/keyrings/debian-archive-keyring.gpg
 export ARCHIVE_KEYRING_FILE=/usr/share/keyrings/univention-archive-key-ucs-4x.gpg
