Bug #33694 KVM: Disable bridge creation by default
Update to rename from libvirt-bin to libvirtd.
Update template file from Debian-Wheezy.
debian/control: Remove Andreas Büsching.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54669 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-node/debian/control
+++ b/virtualization/univention-virtual-machine-manager-node/debian/control
@@ -3,7 +3,6 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Uploaders: Philipp Hahn <hahn@univention.de>,
- Andreas Büsching <buesching@univention.de>,
 Build-Depends: debhelper (>= 9),
  ucslint-univention,
  univention-config-dev
@@ -40,6 +39,6 @@ Depends: ${misc:Depends},
  python-libvirt,
  python-libxml2
 Recommends: univention-nagios-libvirtd-kvm, univention-kvm-virtio
-Description: UCS Virtual Machine Manager node using kvm
+Description: UCS Virtual Machine Manager node using QEMU/KVM
  This meta-package provides basic configuration for virtualization nodes using
- kvm.
+ QEMU/KVM.
