* Bug #35654: add additional CSS classes to dijit/ProgressBar
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54721 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-dojo/Makefile
+++ b/management/univention-dojo/Makefile
@@ -60,7 +60,8 @@ dojo: dojo-*.tar.gz
 	patch -p1 < ../fix_standbyOpacity.patch && \
 	patch -p1 < ../fix_dojo_iframe_textarea.patch && \
 	patch -p1 < ../fix_Dialog_autofocus.patch && \
-	patch -p1 < ../fix_dojox_widget_Standby_scrollbar_offset.patch
+	patch -p1 < ../fix_dojox_widget_Standby_scrollbar_offset.patch && \
+	patch -p1 < ../fix_dijit_ProgressBar_additional_css_classes.patch
 
 # all other JS packages
 libs/%: %-*.tar.gz
