--- a/services/univention-s4-connector/debian/control
+++ b/services/univention-s4-connector/debian/control
@@ -13,7 +13,7 @@ XS-Python-Version: 2.6, 2.7
 Package: python-univention-connector-s4
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
- python-univention,
+ python-univention (>=8.0.3-1),
  python-univention-license,
  python-univention-heimdal (>= 4.0.2-2),
  python-univention-directory-manager (>= 7.0.232-2),
