* Remove the explicit dependency to python-ldap >= 2.4.15.   python-univention needs to be pre-updated (Bug #36229)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54751 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-python/debian/control
+++ b/base/univention-python/debian/control
@@ -10,7 +10,7 @@ XS-Python-Version: 2.6,2.7
 Package: python-univention
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
- python-ldap (>= 2.4.15),
+ python-ldap,
  python-dns,
  python-univention-debug,
  python-cracklib
