--- a/test/ucs-ec2-tools/examples/jenkins/autotest-094-slave-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-094-slave-s3.cfg
@@ -74,7 +74,7 @@ profile:
  server/role="domaincontroller_slave"
  root_password=univention
  locale/default="de_DE.UTF-8:UTF-8"
- packages_install="univention-samba univention-mail-server univention-horde4 univention-printserver univention-pkgdb"
+ packages_install="univention-samba univention-mail-server univention-printserver univention-pkgdb"
  packages_remove=""
  nameserver=[master094_IP]
 command1:
