Update to UCS 4.0 (Bug #36115)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54808 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/univention-directory-manager-module-example/debian/rules
+++ b/packaging/univention-directory-manager-module-example/debian/rules
@@ -4,7 +4,7 @@
 # Univention Directory Manager Example Module
 #  rules file for creating the deb package
 #
-# Copyright 2010-2012 Univention GmbH
+# Copyright 2010-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -68,4 +68,4 @@ override_dh_auto_test:
 	ucslint
 
 %:
-	dh $@
+	dh $@ --with python_support
