--- a/packaging/univention-directory-manager-module-example/debian/control
+++ b/packaging/univention-directory-manager-module-example/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 7.0.50~),
  python-all,
  python-support
 Standards-Version: 3.7.2
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-directory-manager-module-example
 Architecture: all
