Update to UCS 4.0 (Bug #36115)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54810 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/univention-package-template-python/debian/rules
+++ b/packaging/univention-package-template-python/debian/rules
@@ -3,7 +3,7 @@
 # Univention Common Python and Shell Library
 #  rules file for the debian package
 #
-# Copyright 2002-2012 Univention GmbH
+# Copyright 2002-2014 Univention GmbH
 #
 # http://www.univention.de/
 #
@@ -37,4 +37,4 @@ override_dh_auto_test:
 	ucslint
 
 %:
-	dh $@
+	dh $@ --with python_support
