--- a/packaging/univention-package-template-python/debian/control
+++ b/packaging/univention-package-template-python/debian/control
@@ -5,7 +5,7 @@ Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  python-support,
  python-all
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: python-univention-package-template
 Architecture: all
