--- a/packaging/univention-package-template/debian/control
+++ b/packaging/univention-package-template/debian/control
@@ -1,15 +1,33 @@
-Source: univention-multiarch-links
+Source: univention-package-template
 Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.5.5
-Build-Depends: debhelper (>= 7.0.50~)
+Build-Depends: debhelper (>= 7.0.50~),
+ ucslint-univention,
+ python-support,
+ univention-config-dev
 
-Package: univention-multiarch-links
+Package: univention-package-template
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}
-Description: Provide some multiarch links for UCS 4.0 build
- Provide some multiarch links for UCS 4.0 build
+Depends: python-univention-lib (>>0.0.3-1),
+ univention-directory-manager-tools,
+ shell-univention-lib,
+ ${misc:Depends}, ${python:Depends}
+Description: Test package result
+ This package was build as result of a univention package temaplate.
+ .
+ This package is part of Univention Corporate Server (UCS),
+ an integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
+
+Package: univention-package-template-test
+Architecture: all
+Depends: univention-package-template (=${source:Version}),
+ ${misc:Depends}
+Description: Test package result
+ This package was build as result of a univention package temaplate.
  .
  This package is part of Univention Corporate Server (UCS),
  an integrated, directory driven solution for managing
