--- a/packaging/univention-package-template-python/debian/control
+++ b/packaging/univention-package-template-python/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  python-support,
- python-all
+ python-all,
+ ucslint-univention
 XS-Python-Version: 2.6, 2.7
 
 Package: python-univention-package-template
