Bug #35927 DVD: Add .univention_install file
Needed by build-update-iso-ng and univention-repositoy-create.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54839 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -460,7 +460,7 @@ esac
 # The disc_start hook. This will be called near the beginning of the
 # start_new_disc script, just after the directory tree has been created
 # but before any files have been added
-#export DISC_START_HOOK=/bin/true
+export DISC_START_HOOK=/usr/share/debian-cd/tools/ucs_version
 
 # The disc_pkg hook. This will be called just after the
 # start_new_disc script has finished, just before make_disc_trees.pl
