--- a/services/univention-cloud-init/debian/control
+++ b/services/univention-cloud-init/debian/control
@@ -3,13 +3,13 @@ Section: univention
 Priority: optional
 Maintainer: Univention GmbH <packages@univention.de>
 Standards-Version: 3.8.2
-Build-Depends: debhelper (>= 7.0.50~),
+Build-Depends: debhelper (>= 9),
  ucslint-univention,
  python-support,
  python-all,
  univention-config-dev,
  univention-management-console-dev
-XS-Python-Version: 2.6
+XS-Python-Version: 2.6, 2.7
 
 Package: univention-cloud-init
 Architecture: all
