--- a/services/univention-cloud-init/debian/rules
+++ b/services/univention-cloud-init/debian/rules
@@ -32,7 +32,7 @@
 
 override_dh_auto_build:
 	dh_auto_build
-	dh-umc-po2json var/www/ucs-overview/js/appliance/de.po
+	dh-umc-po2json var/www/ucs-overview/js/ci-appliance/de.po
 					
 override_dh_auto_install:
 	univention-install-config-registry
@@ -44,4 +44,4 @@ override_dh_auto_test:
 	ucslint
 
 %:
-	dh $@
+	dh $@ --with python_support
