--- a/services/univention-printserver/debian/control
+++ b/services/univention-printserver/debian/control
@@ -25,6 +25,22 @@ Depends: ${misc:Depends}, ${python:Depends},
  openprinting-ppds,
  hp-ppd,
  printer-driver-all,
+ printer-driver-c2050,
+ printer-driver-c2esp,
+ printer-driver-cjet,
+ printer-driver-escpr,
+ printer-driver-foo2zjs,
+ printer-driver-gutenprint,
+ printer-driver-hpcups,
+ printer-driver-hpijs,
+ printer-driver-m2300w,
+ printer-driver-min12xxw,
+ printer-driver-pnm2ppa,
+ printer-driver-postscript-hp,
+ printer-driver-ptouch,
+ printer-driver-pxljr,
+ printer-driver-sag-gdi,
+ printer-driver-splix
  hpijs-ppds,
  python-pexpect,
  shell-univention-lib,
