Fixed last commit (Bug #36178)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54892 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/debian/control
+++ b/services/univention-printserver/debian/control
@@ -40,7 +40,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  printer-driver-ptouch,
  printer-driver-pxljr,
  printer-driver-sag-gdi,
- printer-driver-splix
+ printer-driver-splix,
  hpijs-ppds,
  python-pexpect,
  shell-univention-lib,
