Bug #35974 DVD: Change GRUB colors
Change GRUB theme for readability.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54898 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -70,6 +70,7 @@ if [ -z "$DI_CODENAME" ]; then
 	export DI_CODENAME=$CODENAME
 fi
 export DI_DIST=ucs400
+export DISKINFO_DISTRO=UCS
 
 # If set, controls where the d-i components are downloaded from.
 # This may be an url, or "default", which will make it use the default url
