Bug #35974 DVD: Change GRUB colors
GRUB themes use the SVG-1.0 color names; see
<http://www.w3.org/TR/css3-color/#svg-color>

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54900 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/data/wheezy/grub-theme.in
+++ b/base/univention-dvd/data/wheezy/grub-theme.in
@@ -1,10 +1,10 @@
 title-color: "black"
 title-text: TITLE
 title-font: "Sans Regular 16"
-desktop-color: "light-gray"
+desktop-color: "lightgrey"
 desktop-image: "/isolinux/splash.png"
 message-color: "black"
-message-bg-color: "light-gray"
+message-bg-color: "lightgrey"
 terminal-font: "Sans Regular 12"
 
 + vbox {
