Bug #35974 DVD: Change GRUB colors
Add missing quotes

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54901 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/data/wheezy/grub-theme.in
+++ b/base/univention-dvd/data/wheezy/grub-theme.in
@@ -54,7 +54,7 @@ terminal-font: "Sans Regular 12"
   top = 200
   height = 200
   item_font = "Sans Regular 12"
-  item_color = #3c3c3c
+  item_color = "#3c3c3c"
   selected_item_color = "black"
   item_height = 20
   item_padding = 15
