Bug #35974 DVD: Change GRUB colors
Change selected menu item to foreground-green, as black and #3c3c3c are
indistinguishable.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54913 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/data/wheezy/grub-theme.in
+++ b/base/univention-dvd/data/wheezy/grub-theme.in
@@ -55,7 +55,7 @@ terminal-font: "Sans Regular 12"
   height = 200
   item_font = "Sans Regular 12"
   item_color = "#3c3c3c"
-  selected_item_color = "black"
+  selected_item_color = "#7ab51d"
   item_height = 20
   item_padding = 15
   item_spacing = 5
