* Bug #36253: Move EC2 connection support to seperate package univention-virtual-machine-manager-cloud-ec2
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54918 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-schema/debian/control
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/control
@@ -43,3 +43,20 @@ Description: UCS Virtual Machine Manager UDM extensions
  an integrated, directory driven solution for managing
  corporate environments. For more information about UCS,
  refer to: http://www.univention.de/
+
+Package: univention-virtual-machine-manager-cloud-ec2
+Architecture: all
+Depends: ${python:Depends}, ${misc:Depends},
+ univention-virtual-machine-manager-schema,
+ shell-univention-lib (>= 1.0.39),
+ univention-directory-manager-tools (>> 7.0.147),
+ python-univention-directory-manager-uvmm (>> 5.0.1-3)
+Description: UCS Virtual Machine Manager cloud connection to Amazon EC2
+ This package contains the OpenLDAP schema definitions for
+ the UVMM (UCS Virtual Machine Manager). It provides connections
+ to Amazon EC2.
+ .
+ This package is part of Univention Corporate Server (UCS),
+ an integrated, directory driven solution for managing
+ corporate environments. For more information about UCS,
+ refer to: http://www.univention.de/
