--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -461,7 +461,7 @@ esac
 # The disc_start hook. This will be called near the beginning of the
 # start_new_disc script, just after the directory tree has been created
 # but before any files have been added
-export DISC_START_HOOK=/usr/share/debian-cd/tools/ucs_version
+export DISC_START_HOOK=/usr/share/univention-dvd/disc_start_hook.sh
 
 # The disc_pkg hook. This will be called just after the
 # start_new_disc script has finished, just before make_disc_trees.pl
