* Bug #36286: reload udm_modules listener to update the python-support   .public files to python2.7
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54956 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/control
+++ b/management/univention-directory-manager-modules/debian/control
@@ -14,6 +14,7 @@ XS-Python-Version: 2.6, 2.7
 Package: python-univention-directory-manager
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
+ python (>= 2.7),
  python-univention (>> 6.0.21),
  python-univention-heimdal (>= 4.0.1-1),
  makepasswd,
