--- a/base/univention-dvd/ucs400.conf
+++ b/base/univention-dvd/ucs400.conf
@@ -189,10 +189,11 @@ export FORCE_FIRMWARE=1
 #export amd64_MKISOFS_OPTS="-as mkisofs -r -checksum_algorithm_iso md5,sha1"
 
 # Keyring (defaults):
-ARCHIVE_KEYRING_PACKAGE=univention-archive-key
+export ARCHIVE_KEYRING_PACKAGE=univention-archive-key
 # The path to the keyring file relative to $TDIR/archive-keyring/
 #ARCHIVE_KEYRING_FILE=usr/share/keyrings/debian-archive-keyring.gpg
-export ARCHIVE_KEYRING_FILE=/usr/share/keyrings/univention-archive-key-ucs-4x.gpg
+# FIXME 2014-10-27 PMH: UCS-4 is still signed by the UCS-3 archive key
+export ARCHIVE_KEYRING_FILE=/usr/share/keyrings/univention-archive-key-ucs-3x.gpg
 
 # By default we use debootstrap --no-check-gpg to find out the minimal set
 # of packages because there's no reason to not trust the local mirror. But
