--- a/services/univention-apache/debian/control
+++ b/services/univention-apache/debian/control
@@ -5,13 +5,14 @@ Maintainer: Univention GmbH <packages@univention.de>
 Build-Depends: debhelper (>= 7.0.50~),
  univention-config-dev,
  ucslint-univention,
- univention-management-console-dev
+ univention-dojo-dev,
+ univention-management-console-dev,
+ stylus
 Standards-Version: 3.8.2
 
 Package: univention-apache
 Architecture: all
 Depends: ${misc:Depends},
- univention-management-console-frontend-theme
  univention-config (>= 8.0.2),
  univention-ssl,
  apache2-mpm-prefork,
